# confs

./: README.md  pyproject.toml
confs/: __init__.py  _cli.py  _const.py  _core.py
